eagle_test/error/undefined_error.eagle
print a;
// expected: [RuntimeError at line 1] Undefined variable 'a'